2023/10/05 Added world group support
2023/07/06 Reworked levellink command
2023/04/11 Added daily information timestamps
2023/04/09 Added checker for worlds that can use temple command
2023/04/07 Added guild ranking and temple (prototype) commands
2023/03/22 Added a temporary /levellink command for easy link calculations
2023/03/18 Reworked /speed command
2023/03/16 Reworked /idlist and added language support
2023/02/21 Added set effect chart
2023/02/01 Added enhance cost chart
2023/01/31 Added simple changelog command
2023/01/30 Added additional skill command /skilldetails that can view data more closer to the original
2023/01/28 Added extra indication for mimi resonace targets for high/lowest defense
2023/01/26 Got a VPS to run the bot so less downtime and faster responses!
2023/01/24 Added tower, quest command to search for enemy data
2023/01/24 Changed number formatting to include commas for long numbers in certain cases
2023/01/23 Added help command
2023/01/21 Added changelog for future changes