@@ -1,3 +1,4 @@
+2023/11/02 Added player ranking
 2023/10/05 Added world group support
 2023/07/06 Reworked levellink command
 2023/04/11 Added daily information timestamps
